# claude-step

./: .gitignore  Package.resolved  Package.swift  README.md  action.yml  claude.md  package-lock.json  pyproject.toml  pytest.ini  spec.md  test-hello.txt
.claude/commands/: generate-claude-md.md  validate-readme.md
.github/workflows/: all-projects.yml  claude-code.yml  claudechain-statistics.yml  claudechain.yml  claudestep-auto-start.yml  claudestep-statistics.yml  claudestep.yml  e2e-test.yml  single-project.yml  test.yml
Sources/ClaudeRefactorLoop/: ClaudeRefactorLoop.swift
claude-step/: README.md
claude-step/e2e-test-d0767dcc/: configuration.yml  pr-template.md  spec.md
claude-step/e2e-test-project/: spec.md
claude-step/test-auto-start-refactor/: spec.md
claude-step/test-hello/: pr-template.md  spec.md
claude-step/test-project-0354015b/: task2.txt
claude-step/test-project-0867bd84/: configuration.yml  spec.md  task2.txt
claude-step/test-project-194e8080/: spec.md
claude-step/test-project-26fc79fb/: spec.md
claude-step/test-project-34ae4a17/: spec.md
claude-step/test-project-514c6610/: task1.txt
claude-step/test-project-5d3598a0/: configuration.yml
claude-step/test-project-80294c96/: spec.md
claude-step/test-project-8c15d567/: spec.md
claude-step/test-project-93ca99a9/: spec.md
claude-step/test-project-9bfb430e/: pr-template.md
claude-step/test-project-b515df15/: spec.md  task1.txt
claude-step/test-project-b8c34aff/: task1-completed.txt
claude-step/test-project-ce0b5a79/: hello.py
claude-step/test-project-d34fa955/: configuration.yml
claude-step/test-project-d8c58485/: spec.md
claude-step/test-project-f865ea90/: hello.py
claude-step/test-project-fd51c2a4/: hello_world.py
discovery/: action.yml
docs/: README.md  architecture.md  metadata-branch-README.md  metadata-schema.md  pr-summary-feature-plan.md  testing-guide.md
docs/architecture/: architecture.md  branch-naming.md  e2e-testing.md  hash-based-task-identification.md  local-testing.md  python-code-style.md  testing-guide.md  tests.md
docs/completed/: 2025-12-27-artifact-api-refactor.md  2025-12-27-feedback.md  2025-12-27-simplify-branch-naming.md  2025-12-27-test-coverage-improvement-plan.md  2025-12-27-v1-improvements.md  2025-12-28-architecture-update.md  2025-12-28-consolidate-pytest-config.md  2025-12-28-e2e-test-failures.md  2025-12-28-e2e-test-isolation.md  2025-12-28-e2e-test-migration.md  2025-12-28-fix-e2e-slack-notifications.md  2025-12-28-fix-e2e-test-failures.md  2025-12-28-fix-model-parameter-passthrough.md  2025-12-28-move-prompt-template-to-resources.md  2025-12-28-pr-summary-feature-plan.md  2025-12-28-remove-benchmarking.md  2025-12-28-standardize-slack-notifications.md  2025-12-28-test-coverage-improvement-2.md  2025-12-28-test-structure-reorganization.md  2025-12-29-github-branch-metadata-storage.md  2025-12-29-github-model-alternatives.md  2025-12-30-adr-001-metadata-as-source-of-truth.md  2025-12-30-cli-adapter-layer.md  2025-12-30-convert-services-to-classes.md  2025-12-30-fix-pr-merge-triggers.md  2025-12-30-fix-timestamp-timezone-handling.md  2025-12-30-formalize-service-layer-pattern.md  2025-12-30-github-pr-service-abstraction.md  2025-12-30-project-domain-model-refactoring.md  (+41 more)
docs/specs/: README.md
examples/: claudestep-simplified.yml  configuration.yml
projects/: e2e-test-project.json  test-project-89c6649a.json  test-project-8dce0510.json  test-project-b1ce74de.json
scripts/: debug_slack_blocks.py  refactor_chain.py
src/: hello.js  helloWorld.ts
statistics/: action.yml
tests/: __init__.py  conftest.py  test_pr_operations.py  test_prepare_summary.py  test_statistics.py  test_table_formatter.py  test_task_management.py
(+298 files in other folders)
