[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claudechain"
version = "0.1.0"
description = "Incremental AI-powered refactoring automation"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "ClaudeChain Contributors" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
claudechain = "claudechain.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--disable-warnings",
    "--cov=src/claudechain",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "unit: Fast unit tests with no external dependencies",
    "integration: Integration tests with mocked external services",
    "e2e: End-to-end tests using real GitHub API and workflows",
    "slow: Tests that take significant time to run",
]

[tool.coverage.run]
source = ["src/claudechain"]
omit = ["*/tests/*"]

[tool.coverage.report]
# Coverage is reported but does not fail tests
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
show_missing = true
precision = 2

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Start permissive, tighten later

[tool.ruff]
line-length = 100
target-version = "py311"
